--- a/index.css
+++ b/index.css
@@ -9,27 +9,29 @@
 body{
   flex-wrap: wrap;
 padding: 10px;
-background-color: rgb(199, 255, 199);
+background-color: rgb(189, 253, 240);
 border-bottom: none;
 
 
 
 }
-
 .fa{
-  font-size:xx-large;
+font-size: x-large;
 }
 .sid{
 text-align: center;
 direction: rtl;
 contain: content;
+background-color: rgb(228, 219, 151);
+border-bottom-left-radius: 20%;
+border-bottom-right-radius: 20%;
 
 }
 
 .btn {
 border: none;
 color: rgb(195, 68, 68);
-font-size: 16px;
+font-size:100%;
 cursor: pointer;
 height: 10px;
 width: 48;
@@ -37,8 +39,9 @@ text-align: left;
 background-color: rgb(255, 255, 255);
 }
 button{
-width: 120px;
-height: 40px;
+width: 140px;
+height: 60px;
+font-size: 85%;
 }
 .top{
 text-align: left;
@@ -60,6 +63,7 @@ font-size: 100% ;
 font-weight:bold ;
 background-color: rgb(70, 153, 176);
 padding: 5px;
+font-weight: bold;
 }
 
 p{
